# Rotem-Retrieval-Research-Repo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bash_aliases.sh  pyproject.toml
awesome-dev-tools/: README.md  interactive_build_command.py  interactive_create_run.py  (+6 more)
projects/experimental-components/: README.md  pyproject.toml
projects/experimental-components/configs/component/chunker/: chonkie_recursive.yaml  chonkie_semantic.yaml  chonkie_sentence.yaml  chonkie_token.yaml
projects/experimental-components/configs/component/chunker/experimental_components/: chonkie_recursive.yaml  chonkie_semantic.yaml  chonkie_sentence.yaml  chonkie_token.yaml
projects/experimental-components/configs/component/document_embedder/: fastembed_dense.yaml  fastembed_sparse.yaml
projects/experimental-components/configs/component/document_embedder/experimental_components/: fastembed_dense.yaml  fastembed_sparse.yaml
projects/experimental-components/configs/component/document_preprocessor/: chonkie_source_id_alias.yaml
projects/experimental-components/configs/component/document_preprocessor/experimental_components/: chonkie_source_id_alias.yaml
projects/experimental-components/configs/component/query_embedder/: fastembed_dense.yaml  fastembed_sparse.yaml
projects/experimental-components/configs/component/query_embedder/experimental_components/: fastembed_dense.yaml  fastembed_sparse.yaml
projects/experimental-components/configs/component/ranker/: fastembed_cross_encoder.yaml  fastembed_late_interaction.yaml
projects/experimental-components/configs/component/ranker/experimental_components/: fastembed_cross_encoder.yaml  fastembed_late_interaction.yaml
projects/experimental-components/configs/pipeline/indexing/: chonkie_recursive_dense_chunked_jsonl.yaml  chonkie_semantic_dense_chunked_jsonl.yaml  chonkie_sentence_dense_chunked_jsonl.yaml  chonkie_token_dense_chunked_jsonl.yaml  fastembed_dense_jsonl.yaml
projects/experimental-components/configs/pipeline/indexing/experimental_components/: chonkie_recursive_dense_chunked_jsonl.yaml  chonkie_semantic_dense_chunked_jsonl.yaml  chonkie_sentence_dense_chunked_jsonl.yaml  chonkie_token_dense_chunked_jsonl.yaml  fastembed_dense_jsonl.yaml
projects/experimental-components/configs/pipeline/inference/: dense_fastembed_cross_encoder_reranker.yaml  dense_fastembed_late_interaction_reranker.yaml  dense_sentence_transformers_reranker.yaml  fastembed_dense_jsonl.yaml
projects/experimental-components/configs/pipeline/inference/experimental_components/: dense_fastembed_cross_encoder_reranker.yaml  dense_fastembed_late_interaction_reranker.yaml  dense_sentence_transformers_reranker.yaml  fastembed_dense_jsonl.yaml
projects/experimental-components/configs/selections/embedding_model/fastembed/: bge_small_en_v1_5.yaml
projects/experimental-components/configs/selections/reranker_model/: ms_marco_minilm_l6_v2.yaml
projects/experimental-components/configs/selections/reranker_model/experimental_components/: ms_marco_minilm_l6_v2.yaml
projects/experimental-components/experiments/chonkie-chunkers-scifact/: experiment.md
projects/experimental-components/experiments/chonkie-chunkers-scifact/configs/base-experiment-configs/: indexing.yaml  inference.yaml
projects/experimental-components/experiments/chonkie-chunkers-scifact/configs/runs/: baseline-evaluation.yaml  baseline-inference.yaml  recursive-evaluation.yaml  recursive-indexing.yaml  recursive-inference.yaml  semantic-evaluation.yaml  semantic-indexing.yaml  semantic-inference.yaml  sentence-evaluation.yaml  sentence-indexing.yaml  sentence-inference.yaml  token-evaluation.yaml  token-indexing.yaml  token-inference.yaml
projects/experimental-components/experiments/fastembed-dense-scifact/: experiment.md
projects/experimental-components/experiments/fastembed-dense-scifact/configs/base-experiment-configs/: indexing.yaml  inference.yaml
projects/experimental-components/experiments/fastembed-dense-scifact/configs/runs/: baseline-evaluation.yaml  baseline-indexing.yaml  fastembed-evaluation.yaml  fastembed-indexing.yaml  fastembed-inference.yaml
projects/experimental-components/experiments/fastembed-rankers-scifact/: experiment.md
projects/experimental-components/src/experimental_components/: __init__.py  components.py
projects/experimental-components/tests/: test_components.py  test_pipeline_configs.py
projects/query-repetition-e5/: README.md  pyproject.toml
projects/query-repetition-e5/configs/pipeline/inference/: dense_query_repetition.yaml
projects/query-repetition-e5/experiments/: query-repetition-e5-small-scifact.md
projects/query-repetition-e5/experiments/query-repetition-e5-small-scifact/: analysis.ipynb  experiment.md
projects/query-repetition-e5/experiments/query-repetition-e5-small-scifact/configs/: inference.yaml  matrix.yaml
projects/query-repetition-e5/experiments/query-repetition-e5-small-scifact/runs/: repeated.yaml
projects/query-repetition-e5/experiments/query-repetition-e5-small-toy/: experiment.md
projects/query-repetition-e5/notebooks/: analyze_predictions.ipynb
projects/query-repetition-e5/scripts/: compare_metrics.py  run_experiment.ps1
projects/query-repetition-e5/src/query_repetition_e5/: __init__.py  components.py
projects/query-repetition-e5/tests/: test_analysis_notebook.py  test_components.py  test_pipeline_config.py
templates/retrieval-project/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
templates/retrieval-project/{{cookiecutter.project_slug}}/experiments/{{cookiecutter.project_slug}}/: analysis.ipynb  experiment.md
templates/retrieval-project/{{cookiecutter.project_slug}}/notebooks/: analyze_predictions.ipynb
templates/retrieval-project/{{cookiecutter.project_slug}}/scripts/: compare_metrics.py  run_experiment.ps1
templates/retrieval-project/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  components.py
templates/retrieval-project/{{cookiecutter.project_slug}}/tests/: test_analysis_notebook.py  test_components.py  test_pipeline_config.py
(+184 files in other folders)
