[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "retrieval-research"
version = "0.1.0"
description = "Hydra-driven Haystack research framework for information retrieval experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "haystack-ai>=2.30,<3",
  "hydra-core>=1.3,<2",
  "omegaconf>=2.3,<3",
  "pyyaml>=6.0,<7",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.8,<1",
]
e5 = [
  "langchain-text-splitters>=0.3,<1",
  "sentence-transformers>=3,<4",
]

[project.scripts]
rr = "retrieval_research.cli:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/retrieval_research"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
