[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = {{ cookiecutter.project_short_description | tojson }}
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "retrieval-core",
  "retrieval-components=={{ cookiecutter.retrieval_components_version }}",
]

[project.optional-dependencies]
dev = [
  "nbstripout>=0.9,<1",
  "pre-commit>=4,<5",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]
torch-cu126 = [
  "torch==2.11.0",
  "torchvision==0.26.0",
  "torchaudio==2.11.0",
]

[tool.uv]
package = true

[tool.uv.sources]
retrieval-core = { path = "../../packages/retrieval-core", editable = true }
retrieval-components = { path = "../../packages/retrieval-components", editable = true }
torch = [
  { index = "pytorch-cu126", extra = "torch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu126", extra = "torch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu126", extra = "torch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
